--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <br />
                         Start building.
                     </h2>
-                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Download for free</a>
+                    <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="#" target="_blank">Download for free</a>
                 </div>
             </div>
         </section>
